small change on baseviewcontroller

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ Build/Products/Debug/EventLogUtility.app/Contents/PkgInfo
 *.xcuserstate
 
 Build/Products/Debug/EventLogUtility.app/Contents/Resources/Document.nib
+
+*.xcuserstate
+
+*.xcuserstate
+
+EventLogUtility.xcodeproj/project.xcworkspace/xcuserdata/gordonxin.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
