--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@ Build/Products/Debug/EventLogUtility.app/Contents/Resources/MainMenu.nib
 Build/Products/Debug/EventLogUtility.app/Contents/Resources/MasterView.nib
 
 *.xcbkptlist
+
+Build/Products/Debug/EventLogUtility.app/Contents/Resources/MasterView.nib
+
+Build/Products/Debug/EventLogUtility.app/Contents/Resources/MasterView.nib
+
+Build/Products/Debug/EventLogUtility.app/Contents/Resources/SearchView.nib
